[workspace]
members = ["mini-lsm", "mini-lsm-mvcc", "mini-lsm-starter", "xtask"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
homepage = "https://github.com/skyzh/mini-lsm"
keywords = ["storage", "database", "tutorial", "course"]
license = "Apache-2.0"
repository = "https://github.com/skyzh/mini-lsm"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
