[package]
name = "mini-lsm-starter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
# arc-swap = "1"
bytes = "1"
clap = { version = "4.4.17", features = ["derive"] }
crossbeam-channel = "0.5.11"
# crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
# farmhash = "1"
moka = "0.9"
ouroboros = "0.16"
parking_lot = "0.12"
# rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0" }

[dev-dependencies]
tempfile = "3"
