[package]
name = "mini-lsm"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A tutorial for building an LSM tree storage engine in a week."

[dependencies]
anyhow = "1"
# arc-swap = "1"
bytes = "1"
clap = { version = "4.4.17", features = ["derive"] }
crossbeam-channel = "0.5.11"
# crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
moka = "0.9"
ouroboros = "0.16"
parking_lot = "0.12"

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }

serde_json = { version = "1.0" }

[dev-dependencies]
tempfile = "3"
