[package]
name = "mini-lsm"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "A course for building an LSM tree storage engine in a week."

[dependencies]
anyhow = "1"
arc-swap = "1"
bytes = "1"
clap = { version = "4.4.17", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-channel = "0.5.15"
crossbeam-epoch = "0.9"
crossbeam-skiplist = "0.1"
farmhash = "1"
moka = "0.9"
nom = "7.1.3"
ouroboros = "0.18"
parking_lot = "0.12"
rand = "0.8.5"
rustyline = "13.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "mini-lsm-cli-ref"
path = "src/bin/mini-lsm-cli.rs"

[[bin]]
name = "mini-lsm-wrapper-ref"
path = "src/bin/wrapper.rs"

[[bin]]
name = "compaction-simulator-ref"
path = "src/bin/compaction-simulator.rs"
